--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -102,7 +102,7 @@ ns <- clarksmith_women %>%
   as.matrix() %>% as.numeric()
 ```
 
-Data from two different, but demographically equivalent, samples were combined to create the final analysis sample (*N =* `r nrow(clarksmith_women)`) used in this study. In the measures section that follows we refer to them as Sample 1 and Sample 2. Sample 1 (*N =* `r ns[3]`) is from a co-ed liberal arts college in the northeast US and Sample 2 (*N =* `r ns[4]`) is from a women’s liberal arts college in the northeast US.
+Data from two different, but demographically equivalent, samples were combined to create the final analysis sample (*N =* `r nrow(clarksmith_women)`) used in this study. In the measures section that follows we refer to them as Sample 1 and Sample 2. Sample 1 (*N =* `r ns[3]`) is from a co-ed liberal arts college in the northeast US and Sample 2 (*N =* `r ns[4]`) is from a women’s liberal arts college in the northeast US. The results section contains more detail about equivalence analyses to support the decision to combine these two samples. 
 
 ```{r correaltions}
 #NOT SURE WHAT THIS CHUNK WAS FOR BUT ITS NOT NEEDED
@@ -366,18 +366,14 @@ Thirty-two previously unacquainted self-identifying female-sex dyads (64 total p
 #cite_r(file = "references.bib")
 r_refs(file = "r-references.bib")
 ```
-
 ## Data analysis
 We used `r cite_r("r-references.bib")` for all our analyses.
-
 ```{r apim, include=TRUE, echo=FALSE, results='asis', out.width="400px", fig.cap="Basic actor-partner interdependence model (APIM) depiction."}
 include_graphics("APIM_figure.png")
 ```
-
 ```{r 2016figure, include=TRUE, echo=FALSE, results='asis', out.width="400px", fig.cap="Path Analysis Model from Garcia et al. (2016) study with distinguishable dyads."}
 include_graphics("2016_figure.jpg")
 ```
-
 ## Analysis Strategy
 This study sought to replicate the results of @garcia2016objectification’s study, done with male-female pairs, which used a dyadic path analysis to detect whether partners’ objectification of one another affected state self-objectification (SSO). See Figure\ \@ref(fig:2016figure) for the results of the analysis from this previous study. We hope to investigate how the central effects found in the previous study relate to interactions between two women. Specifically, we are interested in testing the relationship between state-other objectification and SSO, and how SSO in turn, affecs feelings of inauthenticity during the interaction. In addition, we will also test if the effect of other-objectification in an interaction on SSO is only present for those women who are high in trait self-objectification, as in @garcia2016objectification. Further, we will investigate the realtionships between experiencing interaction inauthenticity and relationship agency, career aspirations, and cognitive performance. 
 
@@ -385,12 +381,17 @@ While @garcia2016objectification used dyadic path analysis, we will conduct our 
 
 Testing the @garcia2016objectification model on the current, same-gender, sample, involves using the Actor-Partner Independence Model (APIM) approch for each outcome variable (i.e., endogenous variable in Figure\ \@ref(fig:2016figure)). Thus, we ran five APIM's to test all the hypothesized relationships. See Figure\ \@ref(fig:apim) for a basic APIM model. The APIM includes effects due to one's own, as well as one's partner's, predictor variables ($X$'s) on the one's own outcome variable ($Y$). Unlike the original @garcia2016objectification study, our study deals with indistinguishable dyads, meaning the designation of who is designated as "actor" and who is designated as "partner" is arbitrary. Recall that the indistinguiahble nature of the dyads in the current study led us to choose the MLM approach over SEM. These analyses are considered exploratory, given the lack of prior research theorizing about these linkages.
 
+Before moving to the main analyses, we discuss statistical equivalence test that provide support for combining Sample 1 and Sample 2 in one analysis sample. The online supplemental material contains the main analyses separated by samples. 
+
 <!-- The model differences as a result of adopting this MLM approach include an examination of the partner effect of TSO on SSO, partner effect of SSO on authenticity, and partner effects of authenticity on congitive performance, relationship agency, and career aspirations.  -->
 
 <!-- We used path analysis to obtain our estimates, but because our sample is nonindependent, we used the indistinguishable actor–partner interdependence model [@olsen2006structural]. The APIM can be defined as a "model of dyadic relationships that integrates a conceptual view of interdependence with the appropriate statistical techniques for measuring and testing it" [@olsen2006structural]. Due to the complexity of the original @garcia2016objectification study, we also had to set the exogenous covariances equal. More specifically, the covariances between TSO, actor and partner objectification, and the interaction between actor TSO and partner objectification (and vice versa). -->
 
 <!-- In order to interpret model fit, which refers to the ability of a model to reproduce the data (i.e., usually the varience-covariance matrix) we utilized both the I-SAT (saturated) model, and the Null model to ensure that all possible corresponding covariences are fixed to be equal across partners. We obtained fit estimates by subtracting the chi-square estimate for the I-SAT model from the analysis model [@olsen2006structural, @peugh2013analyzing]. -->
 
+### Combining Samples
+
+The correaltions between study variables is similar across samples. The realibialities for the study scales were also equivalent. (Note that the two samples were two small to conduct formal measurement equivalence tests for scales.) There are no statistically significant differences between samples in demographics including age, STATS, and ethnicity, STATS. 
 ```{r}
 # #Filtering for just one partnum and creating TSO * objectification interaction
 # dyad_cswomen <- clarksmith_women %>%
@@ -704,7 +705,6 @@ Testing the @garcia2016objectification model on the current, same-gender, sample
 # include_graphics("SEMfigure.png")
 # ```
 ```
-
 ```{r}
 #SSO
 apim1 <- gls(howbody_avg_A ~ a2pSOO_A + a2pSOO_P + TSO_A + a2pSOO_P*TSO_A, 
@@ -719,7 +719,6 @@ apim1.b <- gls(howbody_avg_A ~ a2pSOO_A + a2pSOO_P + TSO_A,
 
 summary(apim1)
 ```
-
 ```{r}
 #authenticity
 apim2 <- gls(authenticity_A ~ howbody_avg_A, 
@@ -753,7 +752,6 @@ apim2.c <- gls(authenticity_A ~a2pSOO_P,
 
 summary(apim2.c)
 ```
-
 ```{r}
 #cognitive performance
 apim3 <- gls(trigram_score_A ~ authenticity_A, 
@@ -777,7 +775,6 @@ apim3.c <- gls(trigram_score_A ~ authenticity_A + howbody_avg_A + a2pSOO_P,
 
 summary(apim3.c)
 ```
-
 ```{r}
 #relationship agency
 apim4 <- gls(relag_A ~ authenticity_A, 
@@ -801,7 +798,6 @@ apim4.c <- gls(relag_A ~ authenticity_A + howbody_avg_A + a2pSOO_P,
 
 summary(apim4.c)
 ```
-
 ```{r}
 #career aspirations
 apim5 <- gls(careerasp_A ~ authenticity_A, 
@@ -825,11 +821,9 @@ apim5.c <- gls(careerasp_A ~ authenticity_A + howbody_avg_A + a2pSOO_P,
 
 summary(apim5.c)
 ```
-
 ```{r semfigure, include=TRUE, echo=FALSE, results='asis', out.width="400px", fig.cap="Path Analysis Model with Estimates"}
 include_graphics("SEMfigure.png")
 ```
-
 ```{r mlm, include=TRUE, results='asis'}
 # fit_table <- xtable(parameterEstimates(fit))
 # 
@@ -907,6 +901,8 @@ The most important finding from @garcia2016objectification was the significant p
 Contrary to expectations, there was no significant effect of SSO on interaction authenticity, although the estimate of this effect was in the hypothesized negative direction, `r report_stats(apim2, 2)`. Because authenticity was a composite score of 9 items, two of which were interaction specific authenticity items, we also tested the effect of SSO on these items individually...ADD ANALYSIS...Although we hypothesized that SSO would mediate the relationship between partner's other objectification and interaction authenticity, after finding no relationship bewteen SSO and authencity, we also tested if the partner's other objectification had a direct effect on authenticity, but this effect was not significant, `r report_stats(apim2.b, 3)` (nor was the total effect of partner's other objectification on authenticity, `r report_stats(apim2.c, 2)`). 
 
 Lastly, althought there was no evidence that SSO was related to interaction authenticity in the current sample, we tested if interaction authenticity (composite of nine items) had effects on cognitive performace, career aspirations, and relationship agency, as it did in @garcia2016objectification. We again used MLM and thus, these efefcts were tested in three separate models. There was no significant effect of interaction authenticity on cognitive performance, `r report_stats(apim3, 2)`, but authenticity was significantly positively related to both career aspirations, `r report_stats(apim5, 2)`, and relationships agency, `r report_stats(apim4, 2)`. There was no direct effect of SSO on cognitive performance, `r report_stats(apim3.b, 3)`, and no direct effect of partner's other objectificaiton on cognifitve performance, `r report_stats(apim3.c, 4)`. There was no direct effect of SSO on career aspirations, `r report_stats(apim5.b, 3)`, and no direct effect of partner's other objectificaiton on career aspirations, `r report_stats(apim5.c, 4)`. There was no direct effect of SSO on relationship agency, `r report_stats(apim4.b, 3)`, and no direct effect of partner's other objectificaiton on relationship agency, `r report_stats(apim4.c, 4)`. 
+
+The results were similar for analyses conducted on Sample 1 and Sample 2 individually. See the online supplemental material for more detail on these analyses. 
 
 #Discussion
 As stated previously, we did not find a significant effect between actor SSO and actor authenticity ($\beta$= -.10, $p$=.38), which suggests that there is not sufficient evidence to support the claim that partner objectification is the cause for the diverse range of negative effects related to relationship inauthenticity. However, we did observe a significant partner effect of objectification on actor self-objectification, which does align with our hypothesis that theorized objectification from other women can also cause women to self-objectify just as they do within interactions between male-female pairs. The results of this study demonstrate the complex and ambivalent nature of female sexual objectification and additionally highlight the psychological and social consequences of such objectification processes on women’s social relationships and well-being. The sample of the current study was comprised of Western women, being that sexual objectification is most prevalent in this culture [@loughnan2015], and research on objectification conducted outside of Western or Westernized countries is scarce [@moradi2008]. Because “bodies exist within social and cultural contexts, and hence are also constructed through sociocultural practices and discourses” [@robertsfredrickson, p.174], it is important to consider how diverse social identities within unique cultural contexts may inform sexual objectification phenomenon to test the cross-cultural applicability of theoretical frameworks [@loughnan2015]. Further, sexualzing experiences and self-objectification are thought to begin a very young age, and thus, researchers have only recently begun to examine such experiences among children [e.g., @holland2016; @jongenelis2014; @bury2016]. Considering the fact that the average mean age of the investigated participants of this current study was 18.85 years, research among younger and older individuals is needed, especially because self-objectification may change over time [@robertsfredrickson]. It may be valuable to question the extent to which children, adolescents, or emerging adults of different races or ethnicities are exposed to varied amounts of sexulizing content. Also, future experiments or longitudinal studies should explore the external validity of the notions of self-objectification and how the operalization of self-objectification may be improved. Regardless, the results from the current analysis highlight how subtle forms of sexist discrimination operate to inform prevention and intervention efforts in both clinical and educational contexts. These results are quite useful for promoting mental health and within early action programs for girls and young women, where scholars and practitioners might provide the tools necessary to circumvent or mitigate negative effects on self-objectification, and combat such experiences.
